[workspace]
members = ["crates/*", "dynamic", "hdr-macros", "utils"]

resolver = "2"

[workspace.package]
version = "0.0.0-dev"
authors = ["HDR Development Team"]
edition = "2021"

[workspace.dependencies]
skyline = "0.2"
skyline_smash = { git =  "https://github.com/blu-dev/skyline-smash", features = ["weak_l2cvalue"] }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
smashline = { git = "https://github.com/blu-dev/smashline", branch = "development" }

dynamic = { path = "dynamic" }
hdr-macros = { path = "hdr-macros" }
utils = { path = "utils" }

bayonetta = { path = "fighters/bayonetta" }
brave = { path = "fighters/brave" }
buddy = { path = "fighters/buddy" }
captain = { path = "fighters/captain" }
chrom = { path = "fighters/chrom" }
cloud = { path = "fighters/cloud" }
common = { path = "fighters/common" }
daisy = { path = "fighters/daisy" }
dedede = { path = "fighters/dedede" }
demon = { path = "fighters/demon" }
diddy = { path = "fighters/diddy" }
dolly = { path = "fighters/dolly" }
donkey = { path = "fighters/donkey" }
duckhunt = { path = "fighters/duckhunt" }
edge = { path = "fighters/edge" }
eflame = { path = "fighters/eflame" }
elight = { path = "fighters/elight" }
falco = { path = "fighters/falco" }
fox = { path = "fighters/fox" }
gamewatch = { path = "fighters/gamewatch" }
ganon = { path = "fighters/ganon" }
gaogaen = { path = "fighters/gaogaen" }
gekkouga = { path = "fighters/gekkouga" }
ike = { path = "fighters/ike" }
inkling = { path = "fighters/inkling" }
jack = { path = "fighters/jack" }
kamui = { path = "fighters/kamui" }
ken = { path = "fighters/ken" }
kirby = { path = "fighters/kirby" }
koopa = { path = "fighters/koopa" }
koopag = { path = "fighters/koopag" }
koopajr = { path = "fighters/koopajr" }
krool = { path = "fighters/krool" }
link = { path = "fighters/link" }
littlemac = { path = "fighters/littlemac" }
lucario = { path = "fighters/lucario" }
lucas = { path = "fighters/lucas" }
lucina = { path = "fighters/lucina" }
luigi = { path = "fighters/luigi" }
mario = { path = "fighters/mario" }
mariod = { path = "fighters/mariod" }
marth = { path = "fighters/marth" }
master = { path = "fighters/master" }
metaknight = { path = "fighters/metaknight" }
mewtwo = { path = "fighters/mewtwo" }
miifighter = { path = "fighters/miifighter" }
miigunner = { path = "fighters/miigunner" }
miiswordsman = { path = "fighters/miiswordsman" }
murabito = { path = "fighters/murabito" }
nana = { path = "fighters/nana" }
ness = { path = "fighters/ness" }
packun = { path = "fighters/packun" }
pacman = { path = "fighters/pacman" }
palutena = { path = "fighters/palutena" }
peach = { path = "fighters/peach" }
pfushigisou = { path = "fighters/pfushigisou" }
pichu = { path = "fighters/pichu" }
pickel = { path = "fighters/pickel" }
pikachu = { path = "fighters/pikachu" }
pikmin = { path = "fighters/pikmin" }
pit = { path = "fighters/pit" }
pitb = { path = "fighters/pitb" }
plizardon = { path = "fighters/plizardon" }
popo = { path = "fighters/popo" }
purin = { path = "fighters/purin" }
pzenigame = { path = "fighters/pzenigame" }
reflet = { path = "fighters/reflet" }
richter = { path = "fighters/richter" }
ridley = { path = "fighters/ridley" }
robot = { path = "fighters/robot" }
rockman = { path = "fighters/rockman" }
rosetta = { path = "fighters/rosetta" }
roy = { path = "fighters/roy" }
ryu = { path = "fighters/ryu" }
samus = { path = "fighters/samus" }
samusd = { path = "fighters/samusd" }
sheik = { path = "fighters/sheik" }
shizue = { path = "fighters/shizue" }
shulk = { path = "fighters/shulk" }
simon = { path = "fighters/simon" }
snake = { path = "fighters/snake" }
sonic = { path = "fighters/sonic" }
szerosuit = { path = "fighters/szerosuit" }
tantan = { path = "fighters/tantan" }
toonlink = { path = "fighters/toonlink" }
trail = { path = "fighters/trail" }
wario = { path = "fighters/wario" }
wiifit = { path = "fighters/wiifit" }
wolf = { path = "fighters/wolf" }
yoshi = { path = "fighters/yoshi" }
younglink = { path = "fighters/younglink" }
zelda = { path = "fighters/zelda" }

[package]
name = "hdr"
version.workspace = true
authors.workspace = true

[package.metadata.skyline]
titleid = "01006A800016E000"

[dependencies]
hid-hdr = { git = "https://github.com/HDR-Development/hid-hdr", features = ["warnings"] }
once_cell = "1"
ninput = { git = "https://github.com/blu-dev/ninput" }
rand = { git = "https://github.com/skyline-rs/rand" }
runtime-motion-patcher.git = "https://github.com/blu-dev/runtime-motion-patcher"
skyline.workspace = true
skyline_smash.workspace = true
smashline.workspace = true
skyline-web = { workspace = true, optional = true }
utils.workspace = true

[build-dependencies]
build-tools = { path = "crates/build-tools" }
hdr-macros.workspace = true

[features]
dev = ["utils/no-offset-search"]
main_nro = ["skyline-web"]
add_status = []
runtime = []

[patch.'https://github.com/jam1garner/smash-arc']
smash-arc = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[lib]
crate-type = ["cdylib"]
